[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/level/wooden_door.png" type="Texture" id=1]
[ext_resource path="res://levels/props/Door.gd" type="Script" id=2]
[ext_resource path="res://sounds/doorOpen_2.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.4197, 75.1007 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.3311, 10 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -32.0369, -9.24315, 32.0504, -8.88802, 32.0504, 9.4923, -32.0001, 9.35199 )

[sub_resource type="Animation" id=4]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("DoorSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("DoorSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -128, 0 ) ]
}

[node name="Door" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="DetectionVolume" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DoorSprite" type="Sprite" parent="."]
scale = Vector2( 2, 1 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="DoorSprite"]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorSprite/StaticBody2D"]
visible = false
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="DoorSprite"]
occluder = SubResource( 3 )

[node name="OpenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 4 )
anims/open = SubResource( 5 )

[node name="CloseTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="play_door_sound"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_CloseTimer_timeout"]
